--- a/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
+++ b/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Lpl-rW-yyL" kind="show" id="Jy6-lJ-vyQ"/>
+                                    <segue destination="csX-hC-gsA" kind="show" id="ejF-Ev-tEK"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="99J-rk-iHq">
@@ -82,6 +82,36 @@
             </objects>
             <point key="canvasLocation" x="1117" y="387"/>
         </scene>
+        <!--Food Menu-->
+        <scene sceneID="3l1-0X-a7T">
+            <objects>
+                <tableViewController id="csX-hC-gsA" customClass="MenuTableViewController" customModule="FoodParadise" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="bTe-Zt-KzE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="XXg-AX-1tY">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XXg-AX-1tY" id="8if-Xh-C4N">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="vY6-lz-Bxj" kind="show" id="hHi-gB-t8P"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="csX-hC-gsA" id="ohM-5w-dQe"/>
+                            <outlet property="delegate" destination="csX-hC-gsA" id="XCL-Hk-Yht"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Food Menu" id="m7D-FU-8Pg" customClass="Menu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N20-Ng-DKd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1118" y="1134"/>
+        </scene>
         <!--Title-->
         <scene sceneID="2sv-bW-dFf">
             <objects>
@@ -94,7 +124,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n9m-Cf-ULJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n9m-Cf-ULJ">
                                 <rect key="frame" x="188" y="108" width="224" height="224"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="224" id="t4S-sG-bqv"/>
@@ -184,7 +214,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Lpl-rW-yyL" kind="show" id="ees-4A-v7Z"/>
+                                    <segue destination="csX-hC-gsA" kind="show" id="TGO-lu-Txr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qP3-MX-xse">
@@ -246,7 +276,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Lpl-rW-yyL" kind="presentation" id="1fA-Ez-atK"/>
+                                    <segue destination="csX-hC-gsA" kind="presentation" id="8Du-Td-Axe"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -324,47 +354,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tcA-JN-iUy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1920" y="1906"/>
-        </scene>
-        <!--Food Menu-->
-        <scene sceneID="jAd-7x-Vgk">
-            <objects>
-                <collectionViewController id="Lpl-rW-yyL" customClass="MenuCollectionViewController" customModule="FoodParadise" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="TVh-h4-Ebu">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.89526600280000002" blue="0.70839235560000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lGf-BI-usx">
-                            <size key="itemSize" width="100" height="100"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="MSG-1Z-Ok5">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <connections>
-                                    <segue destination="vY6-lz-Bxj" kind="show" id="lLV-Ce-3RI"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="Lpl-rW-yyL" id="56D-6K-oym"/>
-                            <outlet property="delegate" destination="Lpl-rW-yyL" id="fX8-dt-Uz2"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="Food Menu" id="66g-xj-ZjR">
-                        <barButtonItem key="rightBarButtonItem" title="Logout" id="MqS-HV-26f"/>
-                    </navigationItem>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oyI-il-CxI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1117" y="1133"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="WYY-hl-Dng">
@@ -526,7 +515,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Jy6-lJ-vyQ"/>
+        <segue reference="ejF-Ev-tEK"/>
         <segue reference="1Pf-bm-E36"/>
     </inferredMetricsTieBreakers>
 </document>
