working login with post data storage

--- a/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
+++ b/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
@@ -377,11 +377,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MkH-Fv-HYt">
-                                <rect key="frame" x="203" y="220" width="195" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hIR-NV-j4n">
                                 <rect key="frame" x="203" y="258" width="195" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -411,6 +406,11 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MkH-Fv-HYt">
+                                <rect key="frame" x="203" y="220" width="195" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -429,9 +429,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="confirm" destination="hIR-NV-j4n" id="Rwx-Si-rDK"/>
-                        <outlet property="password" destination="MkH-Fv-HYt" id="62n-hn-Wit"/>
-                        <outlet property="username" destination="hMJ-0m-Dix" id="c1D-od-RmM"/>
+                        <outlet property="confirmTxt" destination="hIR-NV-j4n" id="1XO-53-e2D"/>
+                        <outlet property="passwordTxt" destination="MkH-Fv-HYt" id="kd0-0a-Dwf"/>
+                        <outlet property="usernameTxt" destination="hMJ-0m-Dix" id="0SV-9d-idv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XL5-LE-Whw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -518,6 +518,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="1Pf-bm-E36"/>
-        <segue reference="ejF-Ev-tEK"/>
+        <segue reference="8Du-Td-Axe"/>
     </inferredMetricsTieBreakers>
 </document>
