Working login with external data storage

--- a/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
+++ b/FoodParadise/FoodParadise/Base.lproj/Main.storyboard
@@ -517,7 +517,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="1Pf-bm-E36"/>
+        <segue reference="XTs-DL-chx"/>
         <segue reference="8Du-Td-Axe"/>
     </inferredMetricsTieBreakers>
 </document>
